add new elements and debug something